<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shopify</string>
    <string name="action_settings">Settings</string>

    <string name="fragment_home">Home</string>
    <string name="fragment_shop">Shop</string>
    <string name="fragment_about">About</string>

    <string name="number1">I</string>
    <string name="number2">II</string>
    <string name="number3">III</string>

    <string name="fragment">Fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="user_name">Jellena</string>
    <string name="user_email">jellena@gmail.com</string>

    <string name="content_description">image view</string>

    <string name="about_text">This application is an example of a Navigation Drawer implementation using a new/bind pattern and the ButterKnife library.</string>
    <string name="about_text2">It was written only for development purposes.</string>
    <string name="action_add">Add</string>

    <string name="tutorial_home_title">Welcome to Shopify!</string>
    <string name="tutorial_home_text">Start by adding shopping category with that small + on the top of the screen</string>

    <string name="tutorial_shop_title">Shop mode</string>
    <string name="tutorial_shop_text">Here will be all your items ordered by shopping priority.</string>

    <string name="tutorial_products_title">Products</string>
    <string name="tutorial_products_text">Here should be your shopping items. Add some with the + on the top of the app.</string>
    <string name="menu_action_refresh">Refresh</string>
    <string name="settings_backup">Backup</string>
    <string name="frag_sett_import_button_text">Import</string>
    <string name="frag_sett_export_button_text">Export</string>
</resources>
