<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:gravity="center_vertical"
        android:padding="@dimen/default_small_padding"
        android:text="@string/settings_backup"
        android:textColor="@color/purple_dark"
        android:textSize="@dimen/text_size_medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/frag_sett_export_db"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/test_btn"
            android:drawableLeft="@drawable/ic_action_save"
            android:text="@string/frag_sett_export_button_text"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium" />

        <Button
            android:id="@+id/frag_sett_import_db"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/test_btn"
            android:drawableLeft="@drawable/ic_action_undo"
            android:text="@string/frag_sett_import_button_text"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium" />
    </LinearLayout>

</LinearLayout>