<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerLayout"
    style="@style/Match">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/new_item_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:background="@color/purple_dark"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/new_item_delete_btn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_action_delete" />

                <EditText
                    android:id="@+id/new_item_name"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:background="@drawable/edit_text_border"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/text_size_large" />

                <ImageButton
                    android:id="@+id/new_item_add_btn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_action_new" />
            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <LinearLayout
                    android:id="@+id/new_category_color_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_small_padding"
                    android:layout_marginTop="@dimen/default_small_padding"
                    android:orientation="horizontal" />
            </HorizontalScrollView>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/contentFrame"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearDrawer"
        android:layout_width="@dimen/navigation_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/background_user_navigation_drawer"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/userDrawerHeader"
            android:layout_width="@dimen/navigation_drawer_width"
            android:layout_height="@dimen/navigation_drawer_personal_data_layout_height">

            <ImageView
                android:id="@+id/drawerUserImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/my_photo_for_drawer" />

            <TextView
                android:id="@+id/drawerUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/drawerUserImage"
                android:text="@string/user_name"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/drawerUserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/drawerUserName"
                android:layout_below="@+id/drawerUserName"
                android:text="@string/user_email"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_micro" />

        </RelativeLayout>

        <include
            android:id="@+id/navigationDrawerListViewWrapper"
            layout="@layout/navigation_drawer_list_view" />

    </LinearLayout>


</android.support.v4.widget.DrawerLayout>

